--- a/challlenge-medical-diet-navigator/food-agent/Makefile
+++ b/challlenge-medical-diet-navigator/food-agent/Makefile
@@ -7,7 +7,7 @@ playground:
 	@echo "==============================================================================="
 	@echo "| 🚀 Starting your agent playground...                                        |"
 	@echo "|                                                                             |"
-	@echo "| 💡 Try asking: What's the weather in San Francisco?                         |"
+	@echo "| 💡 Try asking: What are the top 10 highest protein foods?                         |"
 	@echo "|                                                                             |"
 	@echo "| 🔍 IMPORTANT: Select the 'app' folder to interact with your agent.          |"
 	@echo "==============================================================================="
