--- a/challlenge-medical-diet-navigator/food-agent/pyproject.toml
+++ b/challlenge-medical-diet-navigator/food-agent/pyproject.toml
@@ -23,6 +23,7 @@ dev = [
     "pytest>=8.3.4",
     "pytest-asyncio>=0.23.8",
     "nest-asyncio>=1.6.0",
+    "google-adk>=1.8.0",
 ]
 
 [project.optional-dependencies]
